<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Models.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:layout_margin="@dimen/main_margin"
            android:textSize="30sp"
            tools:ignore="ExtraText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_player1_label"
            android:gravity="center"
            android:layout_margin="@dimen/main_margin">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_player1_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            android:hint="@string/main_player1_label"
            />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_player1_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:inputType="text"
            android:maxLines="1"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_player2_label"
            android:gravity="center"
            android:layout_margin="@dimen/main_margin">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_player2_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            android:hint="@string/main_player2_label"
            />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_player2_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:inputType="text"
            android:maxLines="1"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_commencer"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEnd"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/txt_bt_commencer"
        />
    </RelativeLayout>

</LinearLayout>